<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CricketerActivity"
    android:orientation="vertical">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/who_is_the_best_cricketer_in_the_world"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            />
        <RadioGroup
            android:id="@+id/radiogrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">
            <RadioButton android:id="@+id/sachin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sachin_tendulkar"
                />
            <RadioButton android:id="@+id/virat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/virat_kolli" />
            <RadioButton android:id="@+id/adam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adam_gilchirst"
                />
            <RadioButton
                android:id="@+id/kallis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jacques_kallis"
                />
        </RadioGroup>
        <Button
            android:id="@+id/nextbtnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="end"
            android:background="@color/purple_500"
            />
    </LinearLayout>
</LinearLayout>
  </RelativeLayout>