<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity"
    android:orientation="vertical">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            />
    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/here_are_the_answers_selected"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/who_is_the_best_cricketer_in_the_world"
                android:textColor="@color/question"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/cricket"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/cricketer"
                android:textColor="@color/answer"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/what_are_the_colors_in_the_indian_national_flag"
                android:textColor="@color/question"
                android:textSize="16sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/color"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/flagcolor"
                android:textColor="@color/answer"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="10dp"
       android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/purple_500"/>
    </RelativeLayout>
</LinearLayout>