<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    >
    <TextView
        android:id="@+id/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GAME 1: "
        android:textColor="#292626"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/hello"
        android:textSize="16sp"
        android:textColor="#292626"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/who_is_the_best_cricketer_in_the_world"
            android:textColor="@color/question"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/cricket"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cricketer"
            android:textColor="@color/answer"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/what_are_the_colors_in_the_indian_national_flag"
            android:textColor="@color/question"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/color"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/flagcolor"
            android:textColor="@color/answer"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>